# IntroductionToCXXProgramming

./: .gitignore  README.md
Classes/: CMakeLists.txt
Classes/include/persons/: Juanito.h  NamedPerson.h  Pepita.h  Person.h
Classes/src/: check_persons.cpp  main.cpp  named_persons.cpp
Classes/src/persons/: Juanito.cpp  Pepita.cpp  Person.cpp
EigenStarted/: CMakeLists.txt  main.cpp
HelloWorld/: CMakeLists.txt  helloworld.cpp
InteractiveProgram/: CMakeLists.txt  interactive.cpp
STDCXX11/: CMakeLists.txt  common.h  std_containers.cpp  std_thread.cpp
SharedStaticLibs/: CMakeLists.txt
SharedStaticLibs/include/: constants.h  functions.h
SharedStaticLibs/lib_src/: functions.cpp
SharedStaticLibs/src/: example.cpp
